# SimpleMCP

./: .gitignore  pyproject.toml
src/simplemcp/: client.py  constants.py  helpers.py  mcp.py  messages.py
tests/: test_simplemcp.py
